--- a/안녕 세상아.html
+++ b/안녕 세상아.html
@@ -1,7 +1,10 @@
-<head>
-	<title>Hell로 World!</title>
-	<meta charset="utf-8">
-</head>
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<title>Hell로 World!</title>
+		<meta charset="utf-8">
+	</head>
 	<body>
 		세상아 지옥으로 가
 		<ol>
@@ -12,3 +15,4 @@
 
 
 	</body>
+</html>
